# biome-ex

./: .gitignore  LICENSE  README.md  checksum-Elixir.BiomeJS.Native.exs  clone-biome.sh  download-hashes.sh  hotfix.sh  mix.exs  test.js
.github/workflows/: push.yaml  release.yaml
config/: config.exs
lib/: biomejs.ex
lib/biomejs/: exception.ex  native.ex
native/biomejs_native/: Cargo.toml  README.md  rust-toolchain.toml
native/biomejs_native/src/: lib.rs
test/: biomejs_test.exs  test_helper.exs
