[package]
name = "biomejs_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "biomejs_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
biome_fs = { version = "0.1.0", path = "/Rust/biome-ex/biome/crates/biome_fs" }
biome_service = { version = "0.0.0", path = "/Rust/biome-ex/biome/crates/biome_service" }
rustler = "0.30.0"

[target.'cfg(target_os = "macos")']
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

# See https://github.com/rust-lang/rust/issues/59302
[target.x86_64-unknown-linux-musl]
rustflags = [
  "-C", "target-feature=-crt-static"
]

# Provides a small build size, but takes more time to build.
[profile.release]
lto = true
