[package]
name = "biomejs_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "biomejs_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
biome_fs = { version = "*", path = "./biome/crates/biome_fs" }
biome_service = { version = "0.0.0", path = "./biome/crates/biome_service" }
biome_js_syntax = { version = "*", path = "./biome/crates/biome_js_syntax" }
biome_configuration = { version = "*", path = "./biome/crates/biome_configuration" }
rustler = "0.30.0"

# Provides a small build size, but takes more time to build.
[profile.release]
lto = true
